--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,3 +3,4 @@ encoding//src/controllers/auth/LoginController.java=UTF-8
 encoding//src/controllers/publics/PublicIndexController.java=UTF-8
 encoding//src/controllers/publics/PublicLoginController.java=UTF-8
 encoding//src/controllers/publics/PublicRegisterController.java=UTF-8
+encoding//src/controllers/publics/PublicRoomsController.java=UTF-8
